Re2cTest/Re2cTest/LGLaserParser.c
/* Generated by re2c 0.13.5 on Mon Nov 09 15:33:21 2015 */
// Generated as: re2c -sio LGLaserParser.c LGLaserParser.re
// -*- c++ -*-

#include <stdlib.h>
#include <string.h>
#include <errno.h>
#include <assert.h>

#include "LGLaserParser.h"

/******************************************************************************/

#define atoi(s) atoi((char*)s)

/******************************************************************************/

int LGLaserParser_init(LGLaserParser*           self,
					   LGLaserParser_Callbacks  callbacks)
{
  assert(self);
  assert(callbacks.status);
  assert(callbacks.mode);
  assert(callbacks.version);
  assert(callbacks.firmware);
  assert(callbacks.serialNbr);
  assert(callbacks.pulseWidth);
  assert(callbacks.frequency);
  assert(callbacks.poip);
  assert(callbacks.systemOnCounter);
  assert(callbacks.tecCounter);
  assert(callbacks.powerAmpCounter);
  assert(callbacks.preAmpCounter);
  assert(callbacks.tecResistance);
  assert(callbacks.externalResistance);
  assert(callbacks.boardResistance);
  assert(callbacks.error);

  self->m_callbacks = callbacks;

  return 0;
}

/******************************************************************************/

static int getFloat(unsigned char* t, float* value)
{
  char* end;
  *value = strtof((char*)t, &end);
  return errno == ERANGE;
}

/******************************************************************************/

int LGLaserParser_scan(LGLaserParser* self, char* fifo, int len)
{
  unsigned char *p = fifo;
  unsigned char *t = 0;
  unsigned char *q = 0;  
  int res = 0;
  float fVal;
  
  if (len == 0)
	{
	  return 0;
	}
  
#define YYCTYPE         unsigned char
#define YYCURSOR        p
#define YYMARKER        q  
	
	while (!res)
	{
		t = p;

		{
			YYCTYPE yych;

			yych = *YYCURSOR;
			if (yych <= 'H') {
				if (yych <= 'B') {
					if (yych <= 0x00) goto yy12;
					if (yych != '$') goto yy14;
				} else {
					if (yych <= 'E') {
						if (yych <= 'C') goto yy11;
						goto yy14;
					} else {
						if (yych <= 'F') goto yy8;
						if (yych <= 'G') goto yy14;
						goto yy9;
					}
				}
			} else {
				if (yych <= 'R') {
					if (yych == 'P') goto yy7;
					if (yych <= 'Q') goto yy14;
					goto yy4;
				} else {
					if (yych <= 'T') {
						if (yych <= 'S') goto yy6;
						goto yy10;
					} else {
						if (yych == 'V') goto yy5;
						goto yy14;
					}
				}
			}
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'L') goto yy71;
yy3:
			{ return 1; }
yy4:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'S') goto yy68;
			goto yy3;
yy5:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 'C') goto yy3;
			if (yych <= 'D') goto yy59;
			if (yych <= 'E') goto yy60;
			goto yy3;
yy6:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'N') goto yy56;
			goto yy3;
yy7:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'O') goto yy47;
			if (yych == 'R') goto yy48;
			goto yy3;
yy8:
			yych = *++YYCURSOR;
			if (yych == '=') goto yy45;
			goto yy3;
yy9:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '2') {
				if (yych <= '0') goto yy3;
				if (yych <= '1') goto yy36;
				goto yy35;
			} else {
				if (yych <= '3') goto yy34;
				if (yych <= '4') goto yy33;
				goto yy3;
			}
yy10:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '0') goto yy3;
			if (yych <= '1') goto yy26;
			if (yych <= '2') goto yy25;
			if (yych <= '3') goto yy24;
			goto yy3;
yy11:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'O') goto yy15;
			goto yy3;
yy12:
			++YYCURSOR;
			{ return 0; }
yy14:
			yych = *++YYCURSOR;
			goto yy3;
yy15:
			yych = *++YYCURSOR;
			if (yych == 'M') goto yy17;
yy16:
			YYCURSOR = YYMARKER;
			goto yy3;
yy17:
			yych = *++YYCURSOR;
			if (yych != '_') goto yy16;
			yych = *++YYCURSOR;
			if (yych != 'E') goto yy16;
			yych = *++YYCURSOR;
			if (yych != 'R') goto yy16;
			yych = *++YYCURSOR;
			if (yych != 'R') goto yy16;
			yych = *++YYCURSOR;
			if (yych != '=') goto yy16;
			++YYCURSOR;
			{ goto errorMsg; }
yy24:
			yych = *++YYCURSOR;
			if (yych == '=') goto yy31;
			goto yy16;
yy25:
			yych = *++YYCURSOR;
			if (yych == '=') goto yy29;
			goto yy16;
yy26:
			yych = *++YYCURSOR;
			if (yych != '=') goto yy16;
			++YYCURSOR;
			{ goto tecResistanceMsg; }
yy29:
			++YYCURSOR;
			{ goto externalResistanceMsg; }
yy31:
			++YYCURSOR;
			{ goto boardResistanceMsg; }
yy33:
			yych = *++YYCURSOR;
			if (yych == '=') goto yy43;
			goto yy16;
yy34:
			yych = *++YYCURSOR;
			if (yych == '=') goto yy41;
			goto yy16;
yy35:
			yych = *++YYCURSOR;
			if (yych == '=') goto yy39;
			goto yy16;
yy36:
			yych = *++YYCURSOR;
			if (yych != '=') goto yy16;
			++YYCURSOR;
			{ goto systemOnCounterMsg; }
yy39:
			++YYCURSOR;
			{ goto tecCounterMsg; }
yy41:
			++YYCURSOR;
			{ goto powerAmpCounterMsg; }
yy43:
			++YYCURSOR;
			{ goto preAmpCounterMsg; }
yy45:
			++YYCURSOR;
			{ goto frequencyMsg; }
yy47:
			yych = *++YYCURSOR;
			if (yych == 'I') goto yy52;
			goto yy16;
yy48:
			yych = *++YYCURSOR;
			if (yych != 'W') goto yy16;
			yych = *++YYCURSOR;
			if (yych != '=') goto yy16;
			++YYCURSOR;
			{ goto pulseWidthMsg; }
yy52:
			yych = *++YYCURSOR;
			if (yych != 'P') goto yy16;
			yych = *++YYCURSOR;
			if (yych != '=') goto yy16;
			++YYCURSOR;
			{ goto poipMsg; }
yy56:
			yych = *++YYCURSOR;
			if (yych != '=') goto yy16;
			++YYCURSOR;
			{ goto serialNbrMsg; }
yy59:
			yych = *++YYCURSOR;
			if (yych == '2') goto yy64;
			goto yy16;
yy60:
			yych = *++YYCURSOR;
			if (yych != 'R') goto yy16;
			yych = *++YYCURSOR;
			if (yych != '=') goto yy16;
			++YYCURSOR;
			{ goto versionMsg; }
yy64:
			yych = *++YYCURSOR;
			if (yych != '5') goto yy16;
			yych = *++YYCURSOR;
			if (yych != '=') goto yy16;
			++YYCURSOR;
			{ goto firmwareMsg; }
yy68:
			yych = *++YYCURSOR;
			if (yych != '=') goto yy16;
			++YYCURSOR;
			{ goto modeMsg; }
yy71:
			yych = *++YYCURSOR;
			if (yych != 'S') goto yy16;
			yych = *++YYCURSOR;
			if (yych != '=') goto yy16;
			++YYCURSOR;
			{ goto statusMsg; }
		}


	statusMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			if (yych <= '/') goto yy79;
			if (yych >= 'g') goto yy79;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '/') goto yy78;
			if (yych <= 'f') goto yy80;
yy78:
			{ return 1; }
yy79:
			yych = *++YYCURSOR;
			goto yy78;
yy80:
			yych = *++YYCURSOR;
			if (yych <= '/') goto yy81;
			if (yych <= 'f') goto yy82;
yy81:
			YYCURSOR = YYMARKER;
			goto yy78;
yy82:
			yych = *++YYCURSOR;
			if (yych <= '/') goto yy81;
			if (yych >= 'g') goto yy81;
			yych = *++YYCURSOR;
			if (yych <= '/') goto yy81;
			if (yych >= 'g') goto yy81;
			yych = *++YYCURSOR;
			if (yych <= '/') goto yy81;
			if (yych >= 'g') goto yy81;
			yych = *++YYCURSOR;
			if (yych <= '/') goto yy81;
			if (yych >= 'g') goto yy81;
			yych = *++YYCURSOR;
			if (yych <= '/') goto yy81;
			if (yych >= 'g') goto yy81;
			yych = *++YYCURSOR;
			if (yych >= 0x01) goto yy81;
			++YYCURSOR;
			{
		  char* end;
		  long value = strtol((char*)t, &end, 16);
		  if (errno == ERANGE) return 1;
		  res = self->m_callbacks.status(self->m_callbacks.instance, value);
		  continue;
		  }
		}

		
	modeMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			if (yych <= '/') goto yy94;
			if (yych >= '2') goto yy94;
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 0x00) goto yy95;
yy93:
			{ return 1; }
yy94:
			yych = *++YYCURSOR;
			goto yy93;
yy95:
			++YYCURSOR;
			{ res = self->m_callbacks.mode(self->m_callbacks.instance, atoi(t)); continue; }
		}

		
	versionMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			yych = *(YYMARKER = ++YYCURSOR);
			goto yy102;
			{ return 1; }
yy101:
			YYMARKER = ++YYCURSOR;
			yych = *YYCURSOR;
yy102:
			if (yych <= 0x00) goto yy101;
			goto yy104;
			{ res = self->m_callbacks.version(self->m_callbacks.instance, t); continue; }
yy104:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= 0x00) goto yy101;
			goto yy104;
		}

		
	firmwareMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			yych = *(YYMARKER = ++YYCURSOR);
			goto yy111;
			{ return 1; }
yy110:
			YYMARKER = ++YYCURSOR;
			yych = *YYCURSOR;
yy111:
			if (yych <= 0x00) goto yy110;
			goto yy113;
			{ res = self->m_callbacks.firmware(self->m_callbacks.instance, t); continue; }
yy113:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= 0x00) goto yy110;
			goto yy113;
		}

		
	serialNbrMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			yych = *(YYMARKER = ++YYCURSOR);
			goto yy120;
			{ return 1; }
yy119:
			YYMARKER = ++YYCURSOR;
			yych = *YYCURSOR;
yy120:
			if (yych <= 0x00) goto yy119;
			goto yy122;
			{ res = self->m_callbacks.serialNbr(self->m_callbacks.instance, atoi(t)); continue; }
yy122:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= 0x00) goto yy119;
			goto yy122;
		}

		
	pulseWidthMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			if (yych <= '-') {
				if (yych == '+') goto yy126;
				if (yych <= ',') goto yy130;
			} else {
				if (yych <= '.') goto yy129;
				if (yych <= '/') goto yy130;
				if (yych <= '9') goto yy128;
				goto yy130;
			}
yy126:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == '.') goto yy138;
			if (yych <= '/') goto yy127;
			if (yych <= '9') goto yy136;
yy127:
			{ return 1; }
yy128:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '.') {
				if (yych <= 0x00) goto yy134;
				if (yych <= '-') goto yy127;
				goto yy138;
			} else {
				if (yych <= '/') goto yy127;
				if (yych <= '9') goto yy136;
				goto yy127;
			}
yy129:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '/') goto yy127;
			if (yych <= '9') goto yy131;
			goto yy127;
yy130:
			yych = *++YYCURSOR;
			goto yy127;
yy131:
			++YYCURSOR;
			yych = *YYCURSOR;
yy132:
			if (yych <= 0x00) goto yy134;
			if (yych <= '/') goto yy133;
			if (yych <= '9') goto yy131;
yy133:
			YYCURSOR = YYMARKER;
			goto yy127;
yy134:
			++YYCURSOR;
			{ if (!getFloat(t, &fVal)) return 1; res = self->m_callbacks.pulseWidth(self->m_callbacks.instance, fVal); continue; }
yy136:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= '.') {
				if (yych <= 0x00) goto yy134;
				if (yych <= '-') goto yy133;
			} else {
				if (yych <= '/') goto yy133;
				if (yych <= '9') goto yy136;
				goto yy133;
			}
yy138:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 0x00) goto yy133;
			goto yy132;
		}

		
	frequencyMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			if (yych <= '-') {
				if (yych == '+') goto yy141;
				if (yych <= ',') goto yy145;
			} else {
				if (yych <= '.') goto yy144;
				if (yych <= '/') goto yy145;
				if (yych <= '9') goto yy143;
				goto yy145;
			}
yy141:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == '.') goto yy153;
			if (yych <= '/') goto yy142;
			if (yych <= '9') goto yy151;
yy142:
			{ return 1; }
yy143:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '.') {
				if (yych <= 0x00) goto yy149;
				if (yych <= '-') goto yy142;
				goto yy153;
			} else {
				if (yych <= '/') goto yy142;
				if (yych <= '9') goto yy151;
				goto yy142;
			}
yy144:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '/') goto yy142;
			if (yych <= '9') goto yy146;
			goto yy142;
yy145:
			yych = *++YYCURSOR;
			goto yy142;
yy146:
			++YYCURSOR;
			yych = *YYCURSOR;
yy147:
			if (yych <= 0x00) goto yy149;
			if (yych <= '/') goto yy148;
			if (yych <= '9') goto yy146;
yy148:
			YYCURSOR = YYMARKER;
			goto yy142;
yy149:
			++YYCURSOR;
			{ if (!getFloat(t, &fVal)) return 1; res = self->m_callbacks.frequency(self->m_callbacks.instance, fVal); continue; }
yy151:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= '.') {
				if (yych <= 0x00) goto yy149;
				if (yych <= '-') goto yy148;
			} else {
				if (yych <= '/') goto yy148;
				if (yych <= '9') goto yy151;
				goto yy148;
			}
yy153:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 0x00) goto yy148;
			goto yy147;
		}

		
	poipMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			if (yych <= '-') {
				if (yych == '+') goto yy156;
				if (yych <= ',') goto yy160;
			} else {
				if (yych <= '.') goto yy159;
				if (yych <= '/') goto yy160;
				if (yych <= '9') goto yy158;
				goto yy160;
			}
yy156:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == '.') goto yy168;
			if (yych <= '/') goto yy157;
			if (yych <= '9') goto yy166;
yy157:
			{ return 1; }
yy158:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '.') {
				if (yych <= 0x00) goto yy164;
				if (yych <= '-') goto yy157;
				goto yy168;
			} else {
				if (yych <= '/') goto yy157;
				if (yych <= '9') goto yy166;
				goto yy157;
			}
yy159:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '/') goto yy157;
			if (yych <= '9') goto yy161;
			goto yy157;
yy160:
			yych = *++YYCURSOR;
			goto yy157;
yy161:
			++YYCURSOR;
			yych = *YYCURSOR;
yy162:
			if (yych <= 0x00) goto yy164;
			if (yych <= '/') goto yy163;
			if (yych <= '9') goto yy161;
yy163:
			YYCURSOR = YYMARKER;
			goto yy157;
yy164:
			++YYCURSOR;
			{ if (!getFloat(t, &fVal)) return 1; res = self->m_callbacks.poip(self->m_callbacks.instance, fVal); continue; }
yy166:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= '.') {
				if (yych <= 0x00) goto yy164;
				if (yych <= '-') goto yy163;
			} else {
				if (yych <= '/') goto yy163;
				if (yych <= '9') goto yy166;
				goto yy163;
			}
yy168:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 0x00) goto yy163;
			goto yy162;
		}

		
	systemOnCounterMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			if (yych <= '-') {
				if (yych == '+') goto yy171;
				if (yych <= ',') goto yy175;
			} else {
				if (yych <= '.') goto yy174;
				if (yych <= '/') goto yy175;
				if (yych <= '9') goto yy173;
				goto yy175;
			}
yy171:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == '.') goto yy183;
			if (yych <= '/') goto yy172;
			if (yych <= '9') goto yy181;
yy172:
			{ return 1; }
yy173:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '.') {
				if (yych <= 0x00) goto yy179;
				if (yych <= '-') goto yy172;
				goto yy183;
			} else {
				if (yych <= '/') goto yy172;
				if (yych <= '9') goto yy181;
				goto yy172;
			}
yy174:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '/') goto yy172;
			if (yych <= '9') goto yy176;
			goto yy172;
yy175:
			yych = *++YYCURSOR;
			goto yy172;
yy176:
			++YYCURSOR;
			yych = *YYCURSOR;
yy177:
			if (yych <= 0x00) goto yy179;
			if (yych <= '/') goto yy178;
			if (yych <= '9') goto yy176;
yy178:
			YYCURSOR = YYMARKER;
			goto yy172;
yy179:
			++YYCURSOR;
			{ if (!getFloat(t, &fVal)) return 1; res = self->m_callbacks.systemOnCounter(self->m_callbacks.instance, fVal); continue; }
yy181:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= '.') {
				if (yych <= 0x00) goto yy179;
				if (yych <= '-') goto yy178;
			} else {
				if (yych <= '/') goto yy178;
				if (yych <= '9') goto yy181;
				goto yy178;
			}
yy183:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 0x00) goto yy178;
			goto yy177;
		}

		
	tecCounterMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			if (yych <= '-') {
				if (yych == '+') goto yy186;
				if (yych <= ',') goto yy190;
			} else {
				if (yych <= '.') goto yy189;
				if (yych <= '/') goto yy190;
				if (yych <= '9') goto yy188;
				goto yy190;
			}
yy186:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == '.') goto yy198;
			if (yych <= '/') goto yy187;
			if (yych <= '9') goto yy196;
yy187:
			{ return 1; }
yy188:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '.') {
				if (yych <= 0x00) goto yy194;
				if (yych <= '-') goto yy187;
				goto yy198;
			} else {
				if (yych <= '/') goto yy187;
				if (yych <= '9') goto yy196;
				goto yy187;
			}
yy189:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '/') goto yy187;
			if (yych <= '9') goto yy191;
			goto yy187;
yy190:
			yych = *++YYCURSOR;
			goto yy187;
yy191:
			++YYCURSOR;
			yych = *YYCURSOR;
yy192:
			if (yych <= 0x00) goto yy194;
			if (yych <= '/') goto yy193;
			if (yych <= '9') goto yy191;
yy193:
			YYCURSOR = YYMARKER;
			goto yy187;
yy194:
			++YYCURSOR;
			{ if (!getFloat(t, &fVal)) return 1; res = self->m_callbacks.tecCounter(self->m_callbacks.instance, fVal); continue; }
yy196:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= '.') {
				if (yych <= 0x00) goto yy194;
				if (yych <= '-') goto yy193;
			} else {
				if (yych <= '/') goto yy193;
				if (yych <= '9') goto yy196;
				goto yy193;
			}
yy198:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 0x00) goto yy193;
			goto yy192;
		}

		
	powerAmpCounterMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			if (yych <= '-') {
				if (yych == '+') goto yy201;
				if (yych <= ',') goto yy205;
			} else {
				if (yych <= '.') goto yy204;
				if (yych <= '/') goto yy205;
				if (yych <= '9') goto yy203;
				goto yy205;
			}
yy201:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == '.') goto yy213;
			if (yych <= '/') goto yy202;
			if (yych <= '9') goto yy211;
yy202:
			{ return 1; }
yy203:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '.') {
				if (yych <= 0x00) goto yy209;
				if (yych <= '-') goto yy202;
				goto yy213;
			} else {
				if (yych <= '/') goto yy202;
				if (yych <= '9') goto yy211;
				goto yy202;
			}
yy204:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '/') goto yy202;
			if (yych <= '9') goto yy206;
			goto yy202;
yy205:
			yych = *++YYCURSOR;
			goto yy202;
yy206:
			++YYCURSOR;
			yych = *YYCURSOR;
yy207:
			if (yych <= 0x00) goto yy209;
			if (yych <= '/') goto yy208;
			if (yych <= '9') goto yy206;
yy208:
			YYCURSOR = YYMARKER;
			goto yy202;
yy209:
			++YYCURSOR;
			{ if (!getFloat(t, &fVal)) return 1; res = self->m_callbacks.powerAmpCounter(self->m_callbacks.instance, fVal); continue; }
yy211:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= '.') {
				if (yych <= 0x00) goto yy209;
				if (yych <= '-') goto yy208;
			} else {
				if (yych <= '/') goto yy208;
				if (yych <= '9') goto yy211;
				goto yy208;
			}
yy213:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 0x00) goto yy208;
			goto yy207;
		}

		
	preAmpCounterMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			if (yych <= '-') {
				if (yych == '+') goto yy216;
				if (yych <= ',') goto yy220;
			} else {
				if (yych <= '.') goto yy219;
				if (yych <= '/') goto yy220;
				if (yych <= '9') goto yy218;
				goto yy220;
			}
yy216:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == '.') goto yy228;
			if (yych <= '/') goto yy217;
			if (yych <= '9') goto yy226;
yy217:
			{ return 1; }
yy218:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '.') {
				if (yych <= 0x00) goto yy224;
				if (yych <= '-') goto yy217;
				goto yy228;
			} else {
				if (yych <= '/') goto yy217;
				if (yych <= '9') goto yy226;
				goto yy217;
			}
yy219:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '/') goto yy217;
			if (yych <= '9') goto yy221;
			goto yy217;
yy220:
			yych = *++YYCURSOR;
			goto yy217;
yy221:
			++YYCURSOR;
			yych = *YYCURSOR;
yy222:
			if (yych <= 0x00) goto yy224;
			if (yych <= '/') goto yy223;
			if (yych <= '9') goto yy221;
yy223:
			YYCURSOR = YYMARKER;
			goto yy217;
yy224:
			++YYCURSOR;
			{ if (!getFloat(t, &fVal)) return 1; res = self->m_callbacks.preAmpCounter(self->m_callbacks.instance, fVal); continue; }
yy226:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= '.') {
				if (yych <= 0x00) goto yy224;
				if (yych <= '-') goto yy223;
			} else {
				if (yych <= '/') goto yy223;
				if (yych <= '9') goto yy226;
				goto yy223;
			}
yy228:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 0x00) goto yy223;
			goto yy222;
		}

		
	tecResistanceMsg:
		t = p;
		
		{
			YYCTYPE yych;
			yych = *YYCURSOR;
			if (yych <= '-') {
				if (yych == '+') goto yy231;
				if (yych <= ',') goto yy235;
			} else {
				if (yych <= '.') goto yy234;
				if (yych <= '/') goto yy235;
				if (yych <= '9') goto yy233;
				goto yy235;
			}
yy231:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == '.') goto yy243;
			if (yych <= '/') goto yy232;
			if (yych <= '9') goto yy241;
yy232:
			{ return 1; }
yy233:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '.') {
				if (yych <= 0x00) goto yy239;
				if (yych <= '-') goto yy232;
				goto yy243;
			} else {
				if (yych <= '/') goto yy232;
				if (yych <= '9') goto yy241;
				goto yy232;
			}
yy234:
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '/') goto yy232;
			if (yych <= '9') goto yy236;
			goto yy232;
yy235:
			yych = *++YYCURSOR;
			goto yy232;
yy236:
			++YYCURSOR;
			yych = *YYCURSOR;
yy237:
			if (yych <= 0x00) goto yy239;
			if (yych <= '/') goto yy238;
			if (yych <= '9') goto yy236;
yy238:
